ingress/nginx-ingress/deploy/daemonset_hostnetwork/ingress-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
    - name: http #服务为http
      port: 80   #service端口为80
      targetPort: 80 #容器端口为80
      protocol: TCP
    - name: https
      port: 443 #service 端口为443
      targetPort: 443 #容器端口为443
      protocol: TCP
  selector:
    app: ingress-nginx
